@@ -10,6 +10,7 @@ VDR 1.7.29
 	Pause Live TV on Server
 	Added a 'none' to audio prio settings, which restores the factory setting.
 	Timer ADD/ Timer DEL is now possible by using SmartTVWeb (Show Timers still uses restfulapi) (No more patching of restfulapi is needed!)
+	Instant REC now only records current program ( no EPG, no recording )
 
 
 
